Correct typo in dashboard

--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -116,7 +116,7 @@
                     <div class="col-md-12">
                         <div class="card text-center rounded-4">
                             <div class="card-body">
-                                <h5 class="card-title text-primary text-center">Couriers bookings</h5>
+                                <h5 class="card-title text-primary text-center">Courier bookings</h5>
                                 <!-- <hr> -->
                                 <div class="chart-container" style="height: 200px; width: 100%; position: relative;">
                                     <canvas style="width: fit-content; height: fit-content;" id="courier_graph"></canvas>
