--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-12 mt-2">
+                    <div class="col-md-12 mt-2 mb-2">
                         <div class="card text-center rounded-4">
                             <div class="card-body">
                                 <h5 class="card-title text-primary text-center">Booking Types</h5>
