--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -3,7 +3,7 @@
 <div class="container">
     {% csrf_token %}
     <div class="row">
-        <div class="col-12">
+        <div class="col-md-12">
             <div class="card mt-2 mb-2">
                 <div class="card-header text-center">
                     <b>Dashboard</b>
