--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg navbar-default nav_color_spec fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="{% static 'img/airpost_logo.png' %}" alt="Airpost Xpress" class="img-fluid" id="nav_img">
+                <img src="{% static 'img/airpost_logo_1.png' %}" alt="Airpost Xpress" class="img-fluid" id="nav_img">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
