--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -5,7 +5,7 @@
     <div class="row mt-5 justify-content-center px-3">
         <div class="col-md-5 mt-5 box_border mb-5 rounded-4">
             <div class="text-center">
-                <img src="{% static 'img\\airpost_logo.png' %}" alt="" class="img-fluid mt-3 mb-4" width="280px">
+                <img src="{% static '\img\airpost_logo_1.png' %}" alt="" class="img-fluid mt-3 mb-4" width="280px">
             </div>
             <!-- <h4 class="text-center mt-2">Welcome to Airpost Xpress</h4> -->
             <form action="{% url 'login_auth' %}" method="post">
