--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -158,7 +158,7 @@
             <div class="col-md-3">
                 <h5 class="link-text-decor pt-2">Contact</h5>
                 <hr class="bold-lines">
-                <a href="mailto:airpostxpress@gmail.com" class="link-text-decor">Email: airpostxpress@gmail.com</a>
+                <a href="mailto:support.airpostxpress@gmail.com" class="link-text-decor">Email: support.airpostxpress@gmail.com</a>
             </div>
             <div class="col-md-3">
                 <h5 class="link-text-decor pt-3">Have a business enquiry?</h5>
