--- a/api/templates/terms_and_condition/terms_and_condition.html
+++ b/api/templates/terms_and_condition/terms_and_condition.html
@@ -57,8 +57,8 @@
             <h4 class="elementor-heading-title elementor-size-default text-start">SEVERABILITY</h4>
             <p class="text-start">If any part of the provisions contained in these Terms are determined to be invalid, or unenforceable to any extent, such provision shall be severed from the remaining provisions which shall continue to be valid and enforceable to the fullest
                 extent permitted by law.</p>
-            <h4 class="elementor-heading-title elementor-size-default text-start">GOVERNING LAW AND JURISDICTION </h4>
-            <p class="text-start">These Terms, and any claims arising out of the use of the information from the Applications shall be governed by the laws of India and only the Courts in Bikaner, and no other Courts, shall have jurisdiction over the same.</p>
+            <!-- <h4 class="elementor-heading-title elementor-size-default text-start">GOVERNING LAW AND JURISDICTION </h4>
+            <p class="text-start">These Terms, and any claims arising out of the use of the information from the Applications shall be governed by the laws of India and only the Courts in Bikaner, and no other Courts, shall have jurisdiction over the same.</p> -->
             <h4 class="elementor-heading-title elementor-size-default text-start">VIOLATION OF TERMS</h4>
             <p class="text-start">If you violate these Terms, Airpost Xpress reserves the right to issue you a warning regarding the violation and / or immediately terminate or suspend any or all accounts you have created using the Applications and immediately terminate the
                 contractual agreement you have with Airpost Xpress.</p>
