Added drs img logo correction

--- a/api/templates/bulk_label_print.html
+++ b/api/templates/bulk_label_print.html
@@ -63,7 +63,7 @@
                     </tr>
                     <tr>
                         <td colspan="8" style="border: 0px; border-bottom: 1px solid black; height: 45px;">
-                            <img src="{% static 'img/airpost_logo.png' %}" alt="" width="80%" height="32px" style="padding-left: 45px;">
+                            <img src="{% static '\img\airpost_logo_1.png' %}" alt="" width="80%" height="32px" style="padding-left: 45px;">
                         </td>
                     </tr>
                     <tr>
@@ -192,7 +192,7 @@
                     </tr>
                     <tr>
                         <td colspan="8" style="border: 0px; border-bottom: 1px solid black; height: 45px;">
-                            <img src="{% static 'img/airpost_logo.png' %}" alt="" width="80%" height="32px" style="padding-left: 45px;">
+                            <img src="{% static '\img\airpost_logo_1.png' %}" alt="" width="80%" height="32px" style="padding-left: 45px;">
                         </td>
                     </tr>
                     <tr>
@@ -325,7 +325,7 @@
                     </tr>
                     <tr>
                         <td colspan="8" style="border: 0px; border-bottom: 1px solid black; height: 45px;">
-                            <img src="{% static 'img/airpost_logo.png' %}" alt="" width="80%" height="32px" style="padding-left: 45px;">
+                            <img src="{% static '\img\airpost_logo_1.png' %}" alt="" width="80%" height="32px" style="padding-left: 45px;">
                         </td>
                     </tr>
                     <tr>
@@ -455,7 +455,7 @@
                     </tr>
                     <tr>
                         <td colspan="8" style="border: 0px; border-bottom: 1px solid black; height: 45px;">
-                            <img src="{% static 'img/airpost_logo.png' %}" alt="" width="80%" height="32px" style="padding-left: 45px;">
+                            <img src="{% static '\img\airpost_logo_1.png' %}" alt="" width="80%" height="32px" style="padding-left: 45px;">
                         </td>
                     </tr>
                     <tr>
