--- a/api/templates/print_cash_booking.html
+++ b/api/templates/print_cash_booking.html
@@ -61,7 +61,7 @@
                 </tr>
                 <tr>
                     <td colspan="8" style="border: 0px; border-bottom: 1px solid black; height: 45px;">
-                        <img src="{% static 'img/airpost_logo.png' %}" alt="" width="80%" height="32px" style="padding-left: 45px;">
+                        <img src="{% static '\img\airpost_logo_1.png' %}" alt="" width="80%" height="32px" style="padding-left: 45px;">
                     </td>
                 </tr>
                 <tr>
@@ -189,7 +189,7 @@
                 </tr>
                 <tr>
                     <td colspan="8" style="border: 0px; border-bottom: 1px solid black; height: 45px;">
-                        <img src="{% static 'img/airpost_logo.png' %}" alt="" width="80%" height="32px" style="padding-left: 45px;">
+                        <img src="{% static '\img\airpost_logo_1.png' %}" alt="" width="80%" height="32px" style="padding-left: 45px;">
                     </td>
                 </tr>
                 <tr>
